--- a/live-sale.html
+++ b/live-sale.html
@@ -954,7 +954,7 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="footer-cont">
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column gap-2">
                             <p class="mb-0">&copy; Carsmart Limited 2001 - 2024</p>
                             <div class="d-flex align-items-center gap-lg-5 gap-3">
                                 <a href="#" class="fb-link">Terms</a>
