Form Pages Done.

--- a/pages.html
+++ b/pages.html
@@ -8,22 +8,30 @@
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/select2.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
-        <link rel="stylesheet" href="./assets/css/custom.css">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=1">
     </head>
 
     <body>
         
         <div class="d-flex text-center align-items-center py-5 flex-column" style="min-height: 100vh; font-size: 20px;">
             <h2 class="text-center text-white mb-4">Carsmart: Pages List</h2>
-            <ol class="fw-bold text-white">
+            <ol class="fw-semibold text-white text-start">
                 <li><a href="./live-sale.html" class="text-white">Auction: Live Sale</a></li>
+                <li><a href="./signin-1.html" class="text-white">Sign In 1</a></li>
+                <li><a href="./signin-2.html" class="text-white">Sign In 2</a></li>
+                <li><a href="./signin-3.html" class="text-white">Sign In 3</a></li>
+                <li><a href="./form-validations.html" class="text-white">Sign In form with validations</a></li>
+                <li><a href="./forgot-password.html" class="text-white">Forgot Password</a></li>
+                <li><a href="./reset-password.html" class="text-white">Reset Password</a></li>
+                <li><a href="./change-password.html" class="text-white">Change Password</a></li>
+                <li><a href="./password-confirmation.html" class="text-white">Password Confirmation</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js"></script>
+        <script src="./assets/js/custom.js?v=1"></script>
     </body>
 
 </html>
