--- a/reset-password.html
+++ b/reset-password.html
@@ -75,7 +75,7 @@
                                                     fill="#101044"></path>
                                             </svg>
                                         </button>
-                                        <p class="fpf-bottom-text">Already have an account? <a class="fw-semibold ms-1" href="./signin.html">Sign
+                                        <p class="fpf-bottom-text">Already have an account? <a class="fw-semibold ms-1" href="./signin-1.html">Sign
                                                 in</a></p>
                                     </div>
                                 </form>
