--- a/password-confirmation.html
+++ b/password-confirmation.html
@@ -25,7 +25,7 @@
                                 <h2 class="fp-form-title mb-0">Change Changed Successfully</h2>
                                 <form action="" class="fp-form d-flex flex-column gap-4">
                                     <div class="fpf-bottom">
-                                        <a href="./signin.html" class="btn btn-ftr d-flex align-items-center w-100 justify-content-center"><span>Dashboard Login</span><svg
+                                        <a href="./signin-1.html" class="btn btn-ftr d-flex align-items-center w-100 justify-content-center"><span>Dashboard Login</span><svg
                                                 width="11" height="26" viewBox="0 0 11 26" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
