Signup Page Done.

--- a/live-sale.html
+++ b/live-sale.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/select2.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=1">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=2">
     </head>
 
     <body>
@@ -103,7 +103,7 @@
         </header>
         <!-- Header End -->
         <!-- Main -->
-        <main>
+        <main class="mb-5 pb-4">
             <section class="sale-banner">
                 <div class="container">
                     <div class="text-center text-white">
@@ -823,6 +823,21 @@
         <!-- Main End -->
         <!-- Footer -->
         <footer>
+            <div class="pre-footer">
+                <div class="container pf-cont">
+                    <div class="footer-cont">
+                        <div class="pf-content d-flex flex-column gap-lg-4 gap-3">
+                            <h3 class="pf-title mb-0 d-flex gap-2 fw-medium">
+                                <img src="./assets/img/Rays-green.svg" alt="Rays">
+                                <span>The smarter way 
+                                    to trade.</span>
+                            </h3>
+                            <p class="mb-0 pf-subtitle"><span class="text-parrot">85%</span> of traders earn more with SmartConnect.</p>
+                        </div>
+                        <img src="./assets/img/pre-footer-img.png" alt="Car" class="w-100 img-fluid d-lg-none d-block mt-5">
+                    </div>
+                </div>
+            </div>
             <div class="footer-top">
                 <div class="container">
                     <div class="footer-cont">
@@ -831,7 +846,7 @@
                                 <a href="./index.html" class="ft-logo-link d-block mb-4 pb-1">
                                     <img src="./assets/img/footer-logo-white.svg" alt="Footer Logo">
                                 </a>
-                                <div class="d-flex flex-column gap-3 mb-4 pb-2">
+                                <div class="d-flex flex-column gap-3">
                                     <h4 class="ft-title mb-0">Stalk our socials</h4>
                                     <div class="ft-social-links d-flex align-items-center gap-lg-4 gap-3 pb-1">
                                         <a href="#">
@@ -880,9 +895,31 @@
                                         </a>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="ft-middle d-flex">
+                                <div class="ftm-links">
+                                    <h4 class="ft-title mb-0">Services</h4>
+                                    <ul class="list-unstyled ps-0">
+                                        <li><a href="#" class="ft-link">SmartHub</a></li>
+                                        <li><a href="#" class="ft-link">SmartDrop</a></li>
+                                        <li><a href="#" class="ft-link">SmartConnect</a></li>
+                                        <li><a href="#" class="ft-link">SmartMatch</a></li>
+                                        <li><a href="#" class="ft-link">SmartWallet</a></li>
+                                    </ul>
+                                </div>
+                                <div class="ftm-links">
+                                    <h4 class="ft-title mb-0">Resources</h4>
+                                    <ul class="list-unstyled ps-0">
+                                        <li><a href="#" class="ft-link">Guides</a></li>
+                                        <li><a href="#" class="ft-link">Advertise with us</a></li>
+                                        <li><a href="#" class="ft-link">How we do it</a></li>
+                                        <li><a href="#" class="ft-link">SmartData</a></li>
+                                        <li><a href="#" class="ft-link">Become a trader</a></li>
+                                    </ul>
+                                </div>
                                 <div class="d-flex flex-column gap-3">
                                     <h4 class="ft-title mb-0">Download App</h4>
-                                    <div class="ft-download-links d-flex align-items-center">
+                                    <div class="ft-download-links d-flex flex-column">
                                         <a href="#">
                                             <img src="./assets/img/apple-app.svg.svg" alt="Apple Btn">
                                         </a>
@@ -892,46 +929,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="ft-middle d-flex">
-                                <div class="ftm-links">
-                                    <h4 class="ft-title mb-0">Carsmart</h4>
-                                    <ul class="list-unstyled ps-0">
-                                        <li><a href="#" class="ft-link">About Us</a></li>
-                                        <li><a href="#" class="ft-link">Careers</a></li>
-                                        <li><a href="#" class="ft-link">How we do it</a></li>
-                                        <li><a href="#" class="ft-link">Refer a friend</a></li>
-                                        <li><a href="#" class="ft-link">Press & news</a></li>
-                                        <li><a href="#" class="ft-link">Contact Us</a></li>
-                                        <li><a href="#" class="ft-link">Reviews</a></li>
-                                        <li><a href="#" class="ft-link">Blog</a></li>
-                                    </ul>
-                                </div>
-                                <div class="ftm-links">
-                                    <h4 class="ft-title mb-0">Smart Sell</h4>
-                                    <ul class="list-unstyled ps-0">
-                                        <li><a href="#" class="ft-link">Sell your car</a></li>
-                                        <li><a href="#" class="ft-link">Sell your electric car</a></li>
-                                        <li><a href="#" class="ft-link">Sell your van</a></li>
-                                        <li><a href="#" class="ft-link">Sell your petrol car</a></li>
-                                        <li><a href="#" class="ft-link">Sell your car for cash</a></li>
-                                    </ul>
-                                </div>
-                                <div class="ftm-links">
-                                    <h4 class="ft-title mb-0">Resources</h4>
-                                    <ul class="list-unstyled ps-0">
-                                        <li><a href="#" class="ft-link">Guides</a></li>
-                                        <li><a href="#" class="ft-link">Smart valuation</a></li>
-                                        <li><a href="#" class="ft-link">Become a trader</a></li>
-                                        <li><a href="#" class="ft-link">Smart report</a></li>
-                                        <li><a href="#" class="ft-link">SmartMatch</a></li>
-                                        <li><a href="#" class="ft-link">Help</a></li>
-                                    </ul>
-                                </div>
-                            </div>
                             <div class="ft-right d-flex flex-column gap-3">
-                                <h3 class="ftr-title">Carsmart for dealers & traders</h3>
+                                <h3 class="ftr-title">Want to sell your car? Head over to:</h3>
                                 <div class="mt-1">
-                                    <a href="#" class="btn btn-ftr d-flex align-items-center"><span>SMARTHUB</span><svg
+                                    <a href="#" class="btn btn-main d-flex align-items-center"><span>SMARTHUB</span><svg
                                             width="11" height="26" viewBox="0 0 11 26" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
@@ -954,11 +955,13 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="footer-cont">
-                        <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column gap-2">
+                        <div class="d-flex justify-content-between align-items-center flex-lg-row flex-column gap-2">
                             <p class="mb-0">&copy; Carsmart Limited 2001 - 2024</p>
-                            <div class="d-flex align-items-center gap-lg-5 gap-3">
+                            <div class="d-flex align-items-center gap-lg-5 gap-3 flex-wrap justify-content-center">
+                                <a href="#" class="fb-link">Help</a>
+                                <a href="#" class="fb-link">SmartGuidelines</a>
                                 <a href="#" class="fb-link">Terms</a>
-                                <a href="#" class="fb-link">Privacy Policy</a>
+                                <a href="#" class="fb-link">Privacy policy</a>
                                 <a href="#" class="fb-link">Cookies</a>
                                 <a href="#" class="fb-link">Sitemap</a>
                             </div>
@@ -972,7 +975,7 @@
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=1"></script>
+        <script src="./assets/js/custom.js?v=2"></script>
     </body>
 
 </html>
