--- a/signin-1.html
+++ b/signin-1.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/select2.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=1">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=2">
     </head>
 
     <body class="form-page signin-page">
@@ -58,7 +58,7 @@
                                         <a href="./forgot-password.html">Forgot password?</a>
                                     </div>
                                     <div class="fpf-bottom">
-                                        <button class="btn btn-ftr d-flex align-items-center w-100 justify-content-center"><span>Sign in</span><svg
+                                        <button class="btn btn-main d-flex align-items-center w-100 justify-content-center"><span>Sign in</span><svg
                                                 width="11" height="26" viewBox="0 0 11 26" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
@@ -99,7 +99,7 @@
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=1"></script>
+        <script src="./assets/js/custom.js?v=2"></script>
     </body>
 
 </html>
