--- a/pages.html
+++ b/pages.html
@@ -25,6 +25,8 @@
                 <li><a href="./reset-password.html" class="text-white">Reset Password</a></li>
                 <li><a href="./change-password.html" class="text-white">Change Password</a></li>
                 <li><a href="./password-confirmation.html" class="text-white">Password Confirmation</a></li>
+                <li><a href="./signup.html" class="text-white">Sign Up (3 Sub Pages)</a></li>
+                <li><a href="./signup-confirmation.html" class="text-white">Sign Up Confirmation</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
