--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/select2.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=2">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=3">
     </head>
 
     <body>
@@ -22,75 +22,33 @@
                     </a>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                         <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">How we do it</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false"> SmartHub </a>
+                                    data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item active" href="./live-sale.html">Live sale</a></li>
-                                    <li><a class="dropdown-item" href="#">Buy it now</a></li>
-                                    <li><a class="dropdown-item" href="#">Smart Connect</a></li>
-                                    <li><a class="dropdown-item" href="#">Collection</a></li>
-                                    <li><a class="dropdown-item" href="#">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./live-sale.html">Live sale</a></li>
+                                    <li><a class="dropdown-item" href="#">SmartHub</a></li>
+                                    <li><a class="dropdown-item" href="#">SmartDrop</a></li>
+                                    <li><a class="dropdown-item" href="#">SmartConnect</a></li>
+                                    <li><a class="dropdown-item" href="#">SmartMatch</a></li>
+                                    <li><a class="dropdown-item" href="#">SmartWallet</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Next Sale</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Favorites</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">My Bids</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">My Cars</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Smart Data</a>
+                                <div class="d-lg-none d-flex align-items-center nav-right ms-xl-0 ms-auto">
+                                    <a href="./signup.html" class="btn btn-outline-main">Sign up</a>
+                                    <a href="./signin-1.html" class="btn btn-main">Sign in</a>
+                                </div>
                             </li>
                         </ul>
                     </div>
                     <!-- Right: Chat and Profile Icon with Dropdown -->
-                    <div class="d-flex align-items-center nav-right ms-xl-0 ms-auto">
-                        <a href="#" class="nav-link nr-chat-link">
-                            <svg width="48" height="49" viewBox="0 0 48 49" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle opacity="0.56" cx="24" cy="24.2402" r="23.3" stroke="white"
-                                    stroke-width="1.4" />
-                                <g clip-path="url(#clip0_38_477)">
-                                    <path d="M20 21.2402H28" stroke="white" stroke-width="1.4" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                    <path d="M20 25.2402H26" stroke="white" stroke-width="1.4" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                    <path
-                                        d="M30 16.2402C30.7956 16.2402 31.5587 16.5563 32.1213 17.1189C32.6839 17.6815 33 18.4446 33 19.2402V27.2402C33 28.0359 32.6839 28.7989 32.1213 29.3616C31.5587 29.9242 30.7956 30.2402 30 30.2402H25L20 33.2402V30.2402H18C17.2044 30.2402 16.4413 29.9242 15.8787 29.3616C15.3161 28.7989 15 28.0359 15 27.2402V19.2402C15 18.4446 15.3161 17.6815 15.8787 17.1189C16.4413 16.5563 17.2044 16.2402 18 16.2402H30Z"
-                                        stroke="white" stroke-width="1.4" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                </g>
-                                <defs>
-                                    <clipPath id="clip0_38_477">
-                                        <rect width="24" height="24" fill="white" transform="translate(12 12.2402)" />
-                                    </clipPath>
-                                </defs>
-                            </svg>
-                        </a>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link nr-profile-link dropdown-toggle d-flex align-items-center" href="#"
-                                id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="./assets/img/nav-profile.png" alt="Profile" class="rounded-circle" width="30"
-                                    height="30">
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
-                                <li><a class="dropdown-item" href="#">My Bids</a></li>
-                                <li><a class="dropdown-item" href="#">My Vehicles</a></li>
-                                <li><a class="dropdown-item" href="#">Add Vehicle</a></li>
-                                <li><a class="dropdown-item" href="#">Help</a></li>
-                                <li><a class="dropdown-item" href="#">SmartHub Fees</a></li>
-                                <li><a class="dropdown-item" href="#">Billing & Invoices</a></li>
-                                <li><a class="dropdown-item" href="#">Log out</a></li>
-                            </ul>
-                        </div>
+                    <div class="d-lg-flex d-none align-items-center nav-right ms-xl-0 ms-auto">
+                        <a href="./signup.html" class="btn btn-outline-main">Sign up</a>
+                        <a href="./signin-1.html" class="btn btn-main">Sign in</a>
                     </div>
                     <!-- Centered Menu with Dropdown -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -101,7 +59,7 @@
                 </div>
             </nav>
             <div class="container flex-grow-1 d-flex flex-column justify-content-center">
-                <div class="d-flex signup-hero-content flex-column gap-xl-5 gap-lg-4 gap-3 mb-md-0 mb-5">
+                <div class="d-flex signup-hero-content flex-column gap-xl-5 gap-lg-4 gap-4 mb-md-0 mb-5">
                     <div class="d-flex gap-2 shc-title">
                         <img src="./assets/img/Rays-purple-left.svg" alt="Rays">
                         <h2 class="mb-0 fw-medium ms-1">SmartHub <span class="purple-underline">Sign up</span></h2>
@@ -305,7 +263,7 @@
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=2"></script>
+        <script src="./assets/js/custom.js?v=3"></script>
     </body>
 
 </html>
