--- a/pages.html
+++ b/pages.html
@@ -27,6 +27,10 @@
                 <li><a href="./password-confirmation.html" class="text-white">Password Confirmation</a></li>
                 <li><a href="./signup.html" class="text-white">Sign Up (3 Sub Pages)</a></li>
                 <li><a href="./signup-confirmation.html" class="text-white">Sign Up Confirmation</a></li>
+                <li><a href="./index.html" class="text-info">Homepage</a></li>
+                <li><a href="./buy-it-now.html" class="text-info">Buy it now</a></li>
+                <li><a href="./smart-connect.html" class="text-info">SmartConnect</a></li>
+                <li><a href="./favourites.html" class="text-info">Favourites</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
