--- a/live-sale.html
+++ b/live-sale.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/select2.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=3">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=4">
     </head>
 
     <body>
@@ -931,7 +931,7 @@
                             <div class="ft-right d-flex flex-column gap-3">
                                 <h3 class="ftr-title">Want to sell your car? Head over to:</h3>
                                 <div class="mt-1">
-                                    <a href="#" class="btn btn-main d-flex align-items-center"><span>SMARTHUB</span><svg
+                                    <a href="#" class="btn btn-main d-flex align-items-center"><span>CARSMART</span><svg
                                             width="11" height="26" viewBox="0 0 11 26" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
@@ -974,7 +974,7 @@
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=3"></script>
+        <script src="./assets/js/custom.js?v=4"></script>
     </body>
 
 </html>
