Profile page added.

--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -7,7 +7,10 @@
         <title>Carsmart</title>
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/select2.min.css">
+        <link rel="stylesheet" href="./assets/css/slick.min.css">
+        <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
+        <link href="./assets/css/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/custom.css?v=4">
     </head>
 
@@ -262,6 +265,8 @@
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/select2.min.js"></script>
+        <script src="./assets/js/aos.js"></script>
+        <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
         <script src="./assets/js/custom.js?v=4"></script>
     </body>
