--- a/pages.html
+++ b/pages.html
@@ -34,6 +34,7 @@
                 <li><a href="./buy-it-now.html" class="text-info">Buy it now</a></li>
                 <li><a href="./smart-connect.html" class="text-info">SmartConnect</a></li>
                 <li><a href="./favourites.html" class="text-info">Favourites</a></li>
+                <li><a href="./profile.html" class="text-info">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
