--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=4">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=5">
     </head>
 
     <body>
@@ -813,6 +813,22 @@
         <!-- Main End -->
         <!-- Footer -->
         <footer>
+            <div class="pre-footer">
+                <div class="container pf-cont">
+                    <div class="footer-cont">
+                        <div class="pf-content d-flex flex-column gap-lg-4 gap-3">
+                            <h3 class="pf-title mb-0 d-flex gap-2 fw-medium">
+                                <img src="./assets/img/Rays-green.svg" alt="Rays">
+                                <span>The smarter way to trade.</span>
+                            </h3>
+                            <p class="mb-0 pf-subtitle"><span class="text-parrot">85%</span> of traders earn more with
+                                SmartConnect.</p>
+                        </div>
+                        <img src="./assets/img/pre-footer-img.png" alt="Car"
+                            class="w-100 img-fluid d-lg-none d-block mt-5">
+                    </div>
+                </div>
+            </div>
             <div class="footer-top">
                 <div class="container">
                     <div class="footer-cont">
@@ -1197,7 +1213,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=4"></script>
+        <script src="./assets/js/custom.js?v=5"></script>
     </body>
 
 </html>
