--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=4">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=5">
     </head>
 
     <body>
@@ -30,11 +30,19 @@
                 <li><a href="./password-confirmation.html" class="text-white">Password Confirmation</a></li>
                 <li><a href="./signup.html" class="text-white">Sign Up (3 Sub Pages)</a></li>
                 <li><a href="./signup-confirmation.html" class="text-white">Sign Up Confirmation</a></li>
-                <li><a href="./index.html" class="text-info">Homepage</a></li>
-                <li><a href="./buy-it-now.html" class="text-info">Buy it now</a></li>
-                <li><a href="./smart-connect.html" class="text-info">SmartConnect</a></li>
-                <li><a href="./favourites.html" class="text-info">Favourites</a></li>
-                <li><a href="./profile.html" class="text-info">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
+                <li><a href="./index.html" class="text-white">Homepage</a></li>
+                <li><a href="./buy-it-now.html" class="text-white">Buy it now</a></li>
+                <li><a href="./smart-connect.html" class="text-white">SmartConnect</a></li>
+                <li><a href="./favourites.html" class="text-white">Favourites</a></li>
+                <li><a href="./profile.html" class="text-white">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
+                <li><a href="./dashboard-invoices.html" class="text-info">Dashboard Invoices</a></li>
+                <li><a href="./dashboard-credits.html" class="text-info">Dashboard Credits</a></li>
+                <li><a href="./dashboard-smart-wallet.html" class="text-info">Dashboard Smart Wallet</a></li>
+                <li><a href="./dashboard-live-bids.html" class="text-info">Dashboard Live Bids</a></li>
+                <li><a href="./dashboard-offers-pending.html" class="text-info">Dashboard Offers Pending</a></li>
+                <li><a href="./our-policy.html" class="text-info">Dashboard Outbid</a></li>
+                <li><a href="./prices-vioded-form-confirmation.html" class="text-info">Prices and Voided form confirmation</a></li>
+                <li><a href="./our-policy.html" class="text-info">Our Policy</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
@@ -43,7 +51,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=4"></script>
+        <script src="./assets/js/custom.js?v=5"></script>
     </body>
 
 </html>
