--- a/prices-vioded-form-confirmation.html
+++ b/prices-vioded-form-confirmation.html
@@ -16,7 +16,7 @@
 
     <body>
         <!-- Header -->
-        <header class="signup-header">
+        <header>
             <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
                 <div class="container gap-3 position-relative">
                     <!-- Left: Logo -->
@@ -25,33 +25,74 @@
                     </a>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">How we do it</a>
-                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
+                                    data-bs-toggle="dropdown" aria-expanded="false"> SmartHub </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="./live-sale.html">Live sale</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartHub</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartDrop</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartConnect</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartMatch</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartWallet</a></li>
+                                    <li><a class="dropdown-item active" href="./buy-it-now.html">Buy it now</a></li>
+                                    <li><a class="dropdown-item" href="./smart-connect.html">Smart Connect</a></li>
+                                    <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <div class="d-lg-none d-flex align-items-center nav-right ms-xl-0 ms-auto">
-                                    <a href="./signup.html" class="btn btn-outline-main">Sign up</a>
-                                    <a href="./signin-1.html" class="btn btn-main">Sign in</a>
-                                </div>
+                                <a class="nav-link" href="#">Next Sale</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Favorites</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">My Bids</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">My Cars</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Smart Data</a>
                             </li>
                         </ul>
                     </div>
                     <!-- Right: Chat and Profile Icon with Dropdown -->
-                    <div class="d-lg-flex d-none align-items-center nav-right ms-xl-0 ms-auto">
-                        <a href="./signup.html" class="btn btn-outline-main">Sign up</a>
-                        <a href="./signin-1.html" class="btn btn-main">Sign in</a>
+                    <div class="d-flex align-items-center nav-right ms-xl-0 ms-auto">
+                        <a href="#" class="nav-link nr-chat-link">
+                            <svg width="48" height="49" viewBox="0 0 48 49" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle opacity="0.56" cx="24" cy="24.2402" r="23.3" stroke="white"
+                                    stroke-width="1.4" />
+                                <g clip-path="url(#clip0_38_477)">
+                                    <path d="M20 21.2402H28" stroke="white" stroke-width="1.4" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    <path d="M20 25.2402H26" stroke="white" stroke-width="1.4" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    <path
+                                        d="M30 16.2402C30.7956 16.2402 31.5587 16.5563 32.1213 17.1189C32.6839 17.6815 33 18.4446 33 19.2402V27.2402C33 28.0359 32.6839 28.7989 32.1213 29.3616C31.5587 29.9242 30.7956 30.2402 30 30.2402H25L20 33.2402V30.2402H18C17.2044 30.2402 16.4413 29.9242 15.8787 29.3616C15.3161 28.7989 15 28.0359 15 27.2402V19.2402C15 18.4446 15.3161 17.6815 15.8787 17.1189C16.4413 16.5563 17.2044 16.2402 18 16.2402H30Z"
+                                        stroke="white" stroke-width="1.4" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_38_477">
+                                        <rect width="24" height="24" fill="white" transform="translate(12 12.2402)" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link nr-profile-link dropdown-toggle d-flex align-items-center" href="#"
+                                id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="./assets/img/nav-profile.png" alt="Profile" class="rounded-circle" width="30"
+                                    height="30">
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="#">My Bids</a></li>
+                                <li><a class="dropdown-item" href="#">My Vehicles</a></li>
+                                <li><a class="dropdown-item" href="#">Add Vehicle</a></li>
+                                <li><a class="dropdown-item" href="#">Help</a></li>
+                                <li><a class="dropdown-item" href="#">SmartHub Fees</a></li>
+                                <li><a class="dropdown-item" href="#">Billing & Invoices</a></li>
+                                <li><a class="dropdown-item" href="#">Log out</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- Centered Menu with Dropdown -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -61,44 +102,18 @@
                     </button>
                 </div>
             </nav>
-            <div class="container flex-grow-1 d-flex flex-column justify-content-center">
-                <div class="d-flex signup-hero-content flex-column gap-xl-5 gap-lg-4 gap-4 mb-md-0 mb-5">
-                    <div class="d-flex gap-2 shc-title">
-                        <img src="./assets/img/Rays-purple-left.svg" alt="Rays">
-                        <h2 class="mb-0 fw-medium ms-1">SmartHub <span class="purple-underline">Sign up</span></h2>
-                    </div>
-                    <div class="ps-xl-5">
-                        <a href="#signup-sec"
-                            class="btn btn-main d-flex align-items-center justify-content-center"><span>Sign
-                                up</span><svg width="11" height="26" viewBox="0 0 11 26" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M3.52377 12.9643C3.52377 13.992 4.35489 14.8281 5.3764 14.8281L8.49893 14.8281C9.52046 14.8281 10.3516 13.992 10.3516 12.9643C10.3516 11.9365 9.52044 11.1004 8.49893 11.1004L5.3764 11.1004C4.35487 11.1004 3.52377 11.9365 3.52377 12.9643Z"
-                                    fill="#101044" />
-                                <path
-                                    d="M5.93474 21.9347L3.54276 19.9152C3.20943 19.6341 2.78676 19.4795 2.35258 19.4795C1.80318 19.4795 1.2857 19.7221 0.932665 20.1452C0.614557 20.5266 0.463165 21.0099 0.506377 21.5057C0.54939 22.0017 0.781952 22.451 1.16111 22.7711L3.55309 24.7906C3.88632 25.0717 4.30909 25.2266 4.74327 25.2266C5.29277 25.2266 5.81025 24.9838 6.16318 24.5606C6.81968 23.7733 6.71727 22.5952 5.93474 21.9347Z"
-                                    fill="#101044" />
-                                <path
-                                    d="M2.35266 6.48437C2.78704 6.48437 3.20971 6.32951 3.54274 6.04824L5.93472 4.0289C6.71725 3.36842 6.81968 2.19033 6.16318 1.40305C5.81025 0.979864 5.29277 0.737066 4.74337 0.737066C4.30889 0.737066 3.88612 0.891929 3.55309 1.1734L1.16111 3.19254C0.781952 3.51248 0.549389 3.96195 0.506377 4.45816C0.463165 4.95397 0.614557 5.43701 0.932665 5.81839C1.28559 6.24158 1.80306 6.48437 2.35266 6.48437Z"
-                                    fill="#101044" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
         </header>
         <!-- Header End -->
         <!-- Main -->
         <main>
             <section class="signup-sec">
                 <div class="container">
-                    <div class="signup-confirm-cont">
+                    <div class="">
                         <div class="signup-flex-main">
                             <div class="signup-form-box signup-confirm-box">
                                 <div class="d-flex flex-column scb-flex align-items-center text-center text-white">
-                                    <h2 class="scb-title mb-0">Congratulations!</h2>
-                                    <p class="mb-0 scb-desc">On signing up to our SmartHub online auction platform! <br> Our team will
-                                        reach out within 24 hours to complete your registration.</p>
+                                    <h2 class="scb-title mb-0">Form submitted successfully</h2>
+                                    <p class="mb-0 scb-desc">Our team will be in touch within 5 business days with an update or outcome. Any fees paid will be refunded to your account or Smart Wallet.</p>
                                 </div>
                                 <div class="scb-box text-center">
                                     <p>If any additional information is required, we may request further details. For a quicker response, contact us now at <br>
