Vehicle Details page done.

--- a/pages.html
+++ b/pages.html
@@ -11,14 +11,14 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=5">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
     </head>
 
     <body>
         
         <div class="d-flex text-center align-items-center py-5 flex-column" style="min-height: 100vh; font-size: 20px;">
             <h2 class="text-center text-white mb-4">Carsmart: Pages List</h2>
-            <ol class="fw-semibold text-white text-start">
+            <ol class="fw-semibold text-white text-start text-capitalize">
                 <li><a href="./live-sale.html" class="text-white">Auction: Live Sale</a></li>
                 <li><a href="./signin-1.html" class="text-white">Sign In 1</a></li>
                 <li><a href="./signin-2.html" class="text-white">Sign In 2</a></li>
@@ -35,14 +35,23 @@
                 <li><a href="./smart-connect.html" class="text-white">SmartConnect</a></li>
                 <li><a href="./favourites.html" class="text-white">Favourites</a></li>
                 <li><a href="./profile.html" class="text-white">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
-                <li><a href="./dashboard-invoices.html" class="text-info">Dashboard Invoices</a></li>
-                <li><a href="./dashboard-credits.html" class="text-info">Dashboard Credits</a></li>
-                <li><a href="./dashboard-smart-wallet.html" class="text-info">Dashboard Smart Wallet</a></li>
-                <li><a href="./dashboard-live-bids.html" class="text-info">Dashboard Live Bids</a></li>
-                <li><a href="./dashboard-offers-pending.html" class="text-info">Dashboard Offers Pending</a></li>
-                <li><a href="./our-policy.html" class="text-info">Dashboard Outbid</a></li>
-                <li><a href="./prices-vioded-form-confirmation.html" class="text-info">Prices and Voided form confirmation</a></li>
-                <li><a href="./our-policy.html" class="text-info">Our Policy</a></li>
+                <li><a href="./dashboard-invoices.html" class="text-white">Dashboard Invoices</a></li>
+                <li><a href="./dashboard-credits.html" class="text-white">Dashboard Credits</a></li>
+                <li><a href="./dashboard-smart-wallet.html" class="text-white">Dashboard Smart Wallet</a></li>
+                <li><a href="./dashboard-live-bids.html" class="text-white">Dashboard Live Bids</a></li>
+                <li><a href="./dashboard-offers-pending.html" class="text-white">Dashboard Offers Pending</a></li>
+                <li><a href="./our-policy.html" class="text-white">Dashboard Outbid</a></li>
+                <li><a href="./prices-vioded-form-confirmation.html" class="text-white">Prices and Voided form confirmation</a></li>
+                <li><a href="./our-policy.html" class="text-white">Our Policy</a></li>
+                <li><a href="./car-details-private-buy-it-now.html" class="text-info">Vehicle details private buy it now</a></li>
+                <li><a href="./car-details-buy-it-now.html" class="text-info">Vehicle details buy it now</a></li>
+                <li><a href="./car-details-private-live-sale.html" class="text-info">Vehicle details private live sale</a></li>
+                <li><a href="./car-details-live-sale.html" class="text-info">Vehicle details live sale</a></li>
+                <li><a href="./car-details-private-quick-sale.html" class="text-info">Vehicle details private quick sale</a></li>
+                <li><a href="./car-details-quick-sale.html" class="text-info">Vehicle details quick sale</a></li>
+                <li><a href="./car-details-smartconnect-sale.html" class="text-info">Vehicle details smartconnect sale</a></li>
+                <li><a href="./car-details-wholesale.html" class="text-info">Vehicle details wholesale</a></li>
+                <li><a href="./car-details-smartexchange.html" class="text-info">Vehicle details smartexchange</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
@@ -51,7 +60,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=5"></script>
+        <script src="./assets/js/custom.js?v=6"></script>
     </body>
 
 </html>
